--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,118 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: hsl(185, 41%, 84%);
+  font-family: "Space Mono", monospace;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app-header {
+  text-align: center;
+  padding-top: 10%;
+  width: 110px;
+  margin: auto;
+  word-break: break-all;
+  color: hsl(183, 100%, 15%);
+  padding-bottom: 50px;
+  font-size: 24px;
+  line-height: 1.6;
+  font-weight: 100;
+}
+
+.custom-card {
+  background-color: white;
+  border-radius: 25px;
+  padding: 30px;
+}
+
+.custom-card-display {
+  background-color: hsl(183, 100%, 15%);
+  color: white;
+  border-radius: 10px;
+}
+
+.bill-style {
+  color: hsl(183, 100%, 15%);
+}
+
+.bill-input-style {
+  margin-bottom: 20px;
+  background-color: hsl(185, 41%, 84%);
+  border-color: hsl(185, 41%, 84%);
+  border-style: none;
+  text-align: right;
+  padding-right: 10px;
+  width: 300px;
+}
+
+.dollar-style {
+  background-color: hsl(185, 41%, 84%);
+  width: 16px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 7px;
+  
+  height: 26px;
+  vertical-align: top;
+}
+
+.button-container-style{
+  padding-left: 10px;
+  margin-bottom: 20px;
+}
+.custom-button-style{
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 2px;
+  padding-top: 2px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  margin-left: 0px;
+  text-align: center;
+  background-color: hsl(183, 100%, 15%);
+}
+
+.custom-h3{
+  font-size: 1.2rem;
+}
+
+.custom-p{
+  font-size: 0.8rem;
+  color: hsl(185, 41%, 84%);
+}
+
+.row1{
+  padding-top: 60px;
+
+}
+
+.custom-card-h1{
+  padding-left: 30px;
+  color: hsl(185, 41%, 84%);
+}
+
+.custom-card-button{
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.custom-card-row{
+  padding-bottom: 30px;
+}
+
+.custom-card-btn{
+  background-color: hsl(185, 41%, 84%);
+}
+
+footer{
+  text-align: center;
+  margin: auto;
+  padding-top: 90px;
+}
+
+input[type=text]:focus{
+  outline:  hsl(185, 41%, 84%);     /* oranges! yey */
+}
+
+.custom-button-style:hover{
+  background-color: hsl(185, 41%, 84%);
+  color: hsl(183, 100%, 15%);
+  border: none;
 }
